[gd_scene load_steps=23 format=2]

[ext_resource path="res://Enemies/Archer/Archer.png" type="Texture" id=1]
[ext_resource path="res://Mechanics/Controllers/WanderController.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mechanics/Stats/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Mechanics/Hitbox and Hurbox/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Mechanics/Hitbox and Hurbox/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Mechanics/Player Detection Zone/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Mechanics/Gold Generation/GoldGenerator.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/Archer/Archer.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 832, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "Shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Walk",
"speed": 7.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 12.0
height = 22.0

[sub_resource type="CapsuleShape2D" id=15]
radius = 18.0

[sub_resource type="CapsuleShape2D" id=13]
radius = 14.0

[sub_resource type="CapsuleShape2D" id=14]
radius = 61.9993
height = 420.0

[node name="Archer" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 144
script = ExtResource( 8 )
jump_height = 85.0
jump_time_to_peak = 0.5
jump_time_to_descent = 0.4

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "Shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 11 )
__meta__ = {
"_editor_description_": ""
}

[node name="Stats" parent="." instance=ExtResource( 3 )]
max_health = 2

[node name="WanderController" parent="." instance=ExtResource( 2 )]

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
modulate = Color( 0, 1, 0.0392157, 1 )
shape = SubResource( 15 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="Hitbox" index="0"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -1 )
shape = SubResource( 13 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 0.12549, 0, 1, 1 )
position = Vector2( 0, -40 )
rotation = 1.5708
shape = SubResource( 14 )

[node name="GoldGenerator" parent="." instance=ExtResource( 7 )]
MAX = 3
MIN = 1

[node name="AttackRate" type="Timer" parent="."]
wait_time = 1.25
one_shot = true

[node name="CanWalk" type="Timer" parent="."]
one_shot = true

[connection signal="noHealth" from="Stats" to="." method="_on_Stats_noHealth"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
